--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"author": "TradeLink",
+	"author": "Sandox.io",
 	"version": "1.0.1",
 	"main": "./src/index.js",
 	"scripts": {
@@ -12,10 +12,10 @@
 		"@polkadot/api": "10.1.3",
 		"@polkadot/util-crypto": "^11.0.2",
 		"inum": "^1.0.2",
-		"object-live": "^1.0.4",
+		"object-live": "^1.0.6",
 		"pool-handlers": "^1.0.2",
-		"redpilule": "^1.0.6",
-		"rollup-plugin-rp": "^1.0.3",
+		"redpilule": "^1.0.7",
+		"rollup-plugin-rp": "^1.0.4",
 		"states-manager": "^1.0.2"
 	},
 	"type": "module",
