--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@polkadot/api": "10.1.3",
 		"@polkadot/util-crypto": "^11.0.2",
 		"inum": "^1.0.2",
+		"jszip": "^3.10.1",
 		"object-live": "^1.0.6",
 		"pool-handlers": "^1.0.2",
 		"redpilule": "^1.0.7",
@@ -20,8 +21,8 @@
 	},
 	"type": "module",
 	"devDependencies": {
-		"@lopatnov/rollup-plugin-uglify": "^2.1.5",
 		"@babel/preset-env": "^7.20.2",
+		"@lopatnov/rollup-plugin-uglify": "^2.1.5",
 		"@rollup/plugin-commonjs": "^21.0.1",
 		"@rollup/plugin-node-resolve": "^13.1.3",
 		"jest": "^29.4.3",
